[package]
name = "sorng-ard"
version = "0.1.0"
edition = "2021"
description = "Apple Remote Desktop protocol: VNC/RFB transport, ARD authentication, screen/input, clipboard, file transfer, curtain mode, and diagnostics"

[dependencies]
sorng-core = { path = "../sorng-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tauri = { version = "2.9.5", features = ["devtools"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
base64 = "0.21"
rand = "0.8"
sha2 = "0.10"
md-5 = "0.10"
aes = "0.8"
cbc = "0.1"
flate2 = "1.0"
image = "0.24"
num_enum = "0.7"
byteorder = "1.5"
hmac = "0.12"
pbkdf2 = { version = "0.12", features = ["simple"] }
der = "0.7"
