[package]
name = "sorng-ard"
version = "0.1.0"
edition = "2021"
description = "Apple Remote Desktop (ARD) protocol implementation for SortOfRemoteNG"

[dependencies]
sorng-core = { path = "../sorng-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tauri = { version = "2", features = [] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
md-5 = "0.10"
aes = "0.8"
cbc = "0.1"
flate2 = "1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
num_enum = "0.7"
byteorder = "1"
hmac = "0.12"
pbkdf2 = "0.12"
