[package]
name = "sorng-ard"
version = "0.1.0"
edition = "2021"
description = "Apple Remote Desktop (ARD) protocol implementation for SortOfRemoteNG"

[dependencies]
sorng-core = { path = "../sorng-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
base64 = "0.22"
rand = { workspace = true }
sha2 = { workspace = true }
md-5 = "0.10"
aes = "0.8"
cbc = "0.1"
flate2 = "1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
num_enum = "0.7"
byteorder = "1"
hmac = { workspace = true }
pbkdf2 = "0.12"
