[package]
name = "sorng-aws-vendor"
version = "0.1.0"
edition = "2021"
description = "Dynamically linked vendor dependencies for the AWS stack"

[lib]
crate-type = ["dylib", "rlib"]

[dependencies]
quick-xml = { version = "0.31", features = ["serialize"] }
percent-encoding = "2.3"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
