[package]
name = "sorng-aws"
version = "0.1.0"
edition = "2021"
description = "Comprehensive AWS integration crate with SigV4 signing, EC2, S3, IAM, STS, Lambda, RDS, CloudWatch, SSM, Secrets Manager, Route 53, ECS, SNS, SQS, and CloudFormation"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tauri = { version = "2.9.5", features = ["devtools"] }
reqwest = { version = "0.11", features = ["json", "cookies"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
base64 = "0.21"
# AWS SigV4 signing
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
# XML response parsing (EC2, S3, IAM, STS, CloudWatch, Route53, SNS, SQS, CloudFormation)
quick-xml = { version = "0.31", features = ["serialize"] }
# URL manipulation
url = "2.5"
percent-encoding = "2.3"
# Binary data
bytes = "1.5"
# Jitter for retry backoff
rand = "0.8"
