[package]
name = "sorng-aws"
version = "0.1.0"
edition = "2021"
description = "Comprehensive AWS integration crate with SigV4 signing, EC2, S3, IAM, STS, Lambda, RDS, CloudWatch, SSM, Secrets Manager, Route 53, ECS, SNS, SQS, and CloudFormation"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true, features = ["cookies"] }
uuid = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
base64 = { workspace = true }
# AWS SigV4 signing
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
# XML response parsing (EC2, S3, IAM, STS, CloudWatch, Route53, SNS, SQS, CloudFormation)
quick-xml = { version = "0.31", features = ["serialize"] }
# URL manipulation
url = { workspace = true }
percent-encoding = "2.3"
# Binary data
bytes = { workspace = true }
# Jitter for retry backoff
rand = { workspace = true }
