[package]
name = "sorng-azure"
version = "0.1.0"
edition = "2021"
description = "Azure Resource Manager integration — VMs, resource groups, storage, networking, app service, SQL, Key Vault, container instances, monitoring, cost management"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tauri = { version = "2.9.5", features = ["devtools"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
base64 = "0.21"
url = "2.5"
