[package]
name = "sorng-azure"
version = "0.1.0"
edition = "2021"
description = "Azure Resource Manager integration — VMs, resource groups, storage, networking, app service, SQL, Key Vault, container instances, monitoring, cost management"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true, features = ["multipart", "stream"] }
base64 = { workspace = true }
url = { workspace = true }
