[package]
name = "sorng-backup-verify"
version = "0.1.0"
edition = "2021"
description = "Automated backup orchestration, integrity verification, disaster recovery testing, backup catalog management, compliance reporting, and cross-site replication verification"

[dependencies]
sorng-core = { path = "../sorng-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tauri = { version = "2.9.5", features = ["devtools"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
sha2 = "0.10"
crc32fast = "1.4"
regex = "1"
thiserror = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
serde_json = "1.0"
tempfile = "3.0"
