[package]
name = "sorng-backup-verify"
version = "0.1.0"
edition = "2021"
description = "Automated backup orchestration, integrity verification, disaster recovery testing, backup catalog management, compliance reporting, and cross-site replication verification"

[dependencies]
sorng-core = { path = "../sorng-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tauri = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
sha2 = { workspace = true }
crc32fast = "1.4"
regex = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
