[package]
name = "sorng-biometrics"
version = "0.1.0"
edition = "2021"
description = "Cross-platform biometric authentication — Windows Hello, macOS Touch ID, Linux fingerprint/polkit"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tauri = { version = "2.9.5", features = ["devtools"] }
log = "0.4"
sha2 = "0.10"
rand = "0.8"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
hostname = "0.3"
thiserror = "1.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_Security_Credentials",
  "Win32_System_Registry",
  "Win32_System_WinRT",
  "Foundation",
  "Security_Credentials_UI",
] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.11"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "4", features = ["tokio"] }
