[package]
name = "sorng-biometrics"
version = "0.1.0"
edition = "2021"
description = "Cross-platform biometric authentication — Windows Hello, macOS Touch ID, Linux fingerprint/polkit"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tauri = { workspace = true }
log = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
hostname = "0.3"
thiserror = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true, features = [
  "Foundation",
  "Security_Credentials_UI",
] }
windows-sys = { workspace = true, features = [
  "Win32_Foundation",
  "Win32_System_Registry",
] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.11"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "4", features = ["tokio"] }
