[package]
name = "sorng-bitwarden"
version = "0.1.0"
edition = "2021"
description = "Bitwarden password manager integration with CLI bridge, REST API client, vault operations, and credential sync."

[dependencies]
sorng-core = { path = "../sorng-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true, features = ["cookies", "multipart"] }
base64 = { workspace = true }
url = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
hkdf = "0.12"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
pbkdf2 = "0.12"

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }
