[package]
name = "sorng-bmc-common"
version = "0.1.0"
edition = "2021"
description = "Shared BMC management protocols: Redfish (DMTF), IPMI-over-LAN, common types for iDRAC, iLO, Supermicro, Lenovo XClarity, etc."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
reqwest = { version = "0.11", features = ["json", "cookies"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
async-trait = "0.1"
