[package]
name = "sorng-bmc-common"
version = "0.1.0"
edition = "2021"
description = "Shared BMC management protocols: Redfish (DMTF), IPMI-over-LAN, common types for iDRAC, iLO, Supermicro, Lenovo XClarity, etc."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true, features = ["cookies"] }
chrono = { workspace = true }
base64 = { workspace = true }
async-trait = { workspace = true }
