[package]
name = "sorng-bootloader"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
description = "Boot loader management for SortOfRemoteNG — GRUB2 configuration, systemd-boot management, UEFI boot entries, kernel parameter editing, initramfs/initrd management, boot entry management, default kernel selection, and recovery options."
publish = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tauri = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
