[package]
name = "sorng-budibase"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
description = "Budibase low-code platform integration crate for SortOfRemoteNG"
publish = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tauri = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true, features = ["cookies", "blocking"] }
url = { workspace = true }
