[package]
name = "sorng-budibase"
version.workspace = true
edition = "2021"
rust-version = "1.77.2"
description = "Budibase low-code platform integration crate for SortOfRemoteNG"
publish = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true, features = ["cookies", "blocking"] }
url = { workspace = true }
