[package]
name = "sorng-ceph"
version = "0.1.0"
edition = "2021"
description = "Ceph distributed storage integration — cluster health, OSD management, pool operations, RBD images, CephFS, RGW (S3/Swift), placement groups, CRUSH maps, MDS, monitors, and performance metrics"

[dependencies]
sorng-core = { path = "../sorng-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tauri = { version = "2.9.5", features = ["devtools"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
reqwest = { version = "0.11", features = ["json", "cookies"] }
url = "2.5"
base64 = "0.21"
thiserror = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
serde_json = "1.0"
