[package]
name = "sorng-ceph"
version = "0.1.0"
edition = "2021"
description = "Ceph distributed storage integration — cluster health, OSD management, pool operations, RBD images, CephFS, RGW (S3/Swift), placement groups, CRUSH maps, MDS, monitors, and performance metrics"

[dependencies]
sorng-core = { path = "../sorng-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true, features = ["cookies"] }
url = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
serde_json = { workspace = true }
