[package]
name = "sorng-cicd"
version = "0.1.0"
edition = "2021"
publish = false
description = "CI/CD integration for SortOfRemote NG — Drone CI, Jenkins, GitHub Actions pipeline management, builds, artifacts, secrets, environments, and Tauri integration"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tauri = { version = "2.9.5", features = ["devtools"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
