[package]
name = "sorng-cloud"
version = "0.1.0"
edition = "2021"
description = "Cloud provider integrations (AWS, Azure, GCP, DigitalOcean, etc.)"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tauri = { version = "2.9.5", features = ["devtools"] }
reqwest = { version = "0.11", features = ["json", "cookies"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
sha1 = "0.10"
hex = "0.4"
log = "0.4"
base64 = "0.21"
