[package]
name = "sorng-cloud"
version = "0.1.0"
edition = "2021"
description = "Cloud provider integrations (AWS, Azure, GCP, DigitalOcean, etc.)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true, features = ["cookies"] }
uuid = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = "9"
sha1 = "0.10"
hex = { workspace = true }
log = { workspace = true }
base64 = { workspace = true }
